sua lai _layout

--- a/CNW/Views/Shared/_Layout.cshtml
+++ b/CNW/Views/Shared/_Layout.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zxx">
 <head>
     <title>Divisima | eCommerce Template</title>
@@ -261,7 +256,8 @@
 
                 <div class="col-lg-9  order-1 order-lg-2 mb-5 mb-lg-0">
                     <div class="row">
-                       @RenderBody()
+                        @RenderBody()
+                        <!-- renderbody -->
                     </div>
                 </div>
             </div>
@@ -458,8 +454,10 @@
 
 
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                <p class="text-white text-center mt-5">Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                <p class="text-white text-center mt-5">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                </p>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </div>
 
