commit cua hiep

--- a/CNW/Views/Checkout/Index.cshtml
+++ b/CNW/Views/Checkout/Index.cshtml
@@ -8,11 +8,11 @@
     <div class="container">
         <h4>Your cart</h4>
         <div class="site-pagination">
-            @Html.ActionLink("Home","Index","Home") /
+            <a href="/Checkout">CheckOut</a>
             <a href="">Your cart</a>
         </div>
     </div>
 </div>
 <!-- Page info end -->
-<h2>Index</h2>
+<h2>CheckOut</h2>
 
