--- a/CNW/Views/Home/Index.cshtml
+++ b/CNW/Views/Home/Index.cshtml
@@ -3,16 +3,173 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!-- Page info -->
-<div class="page-top-info">
-    <div class="container">
-        <h4>Your cart</h4>
-        <div class="site-pagination">
-            @Html.ActionLink("Home","Index","Home") /
-            <a href="">Your cart</a>
+@section HeroSection
+{
+    <section class="hero-section">
+        <div class="hero-slider owl-carousel owl-loaded owl-drag">
+
+
+            <div class="owl-stage-outer">
+                <div class="owl-stage" style="transform: translate3d(-3806px, 0px, 0px); transition: all 0s ease 0s; width: 11418px;">
+                    <div class="owl-item cloned" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-item cloned" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-item active" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-item" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-item cloned" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="owl-item cloned" style="width: 1903px;">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-7 text-white">
+                                        <span>New Arrivals</span>
+                                        <h2>denim jackets</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                    </div>
+                                </div>
+                                <div class="offer-card text-white">
+                                    <span>from</span>
+                                    <h2>$29</h2>
+                                    <p>SHOP NOW</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><div class="slider-nav-warp"><div class="slider-nav"><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i class="flaticon-left-arrow-1"></i></button><button type="button" role="presentation" class="owl-next"><i class="flaticon-right-arrow-1"></i></button></div><div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button></div></div></div>
         </div>
-    </div>
-</div>
-<!-- Page info end -->
-<h2>Index</h2>
+        <div class="container">
+            <div class="slide-num-holder" id="snh-1"><span> 1</span><span>2</span></div>
+        </div>
+    </section>
+}
+@section FeatureSection
+{
+    <section class="features-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 p-0 feature">
+                    <div class="feature-inner">
+                        <div class="feature-icon">
+                            <img src="/Content/img/icons/1.png" alt="#">
+                        </div>
+                        <h2>Fast Secure Payments</h2>
+                    </div>
+                </div>
+                <div class="col-md-4 p-0 feature">
+                    <div class="feature-inner">
+                        <div class="feature-icon">
+                            <img src="/Content/img/icons/2.png" alt="#">
+                        </div>
+                        <h2>Premium Products</h2>
+                    </div>
+                </div>
+                <div class="col-md-4 p-0 feature">
+                    <div class="feature-inner">
+                        <div class="feature-icon">
+                            <img src="/Content/img/icons/3.png" alt="#">
+                        </div>
+                        <h2>Free &amp; fast Delivery</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+}
+
+
+
+
 
