--- a/CNW/Views/Shared/Header.cshtml
+++ b/CNW/Views/Shared/Header.cshtml
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="col-lg-2 text-center text-lg-left">
                 <!-- logo -->
-                <a href="./index.html" class="site-logo">
-                    <img src="img/logo.png" alt="">
+                <a href="/Home" class="site-logo">
+                    <img src="~/Content/img/logo.png" alt="">
                 </a>
             </div>
             <div class="col-xl-6 col-lg-5">
@@ -74,7 +74,7 @@
         </div>
         <!-- menu -->
         <ul class="main-menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="/Home">Home</a></li>
             <li><a href="#">Women</a></li>
             <li><a href="#">Men</a></li>
             <li>
