commit View them

--- a/CNW/Views/Home/Index.cshtml
+++ b/CNW/Views/Home/Index.cshtml
@@ -168,6 +168,22 @@
     </section>
 
 }
+<!-- Body start -->
+@RenderPage("HomeBody.cshtml")
+<!-- Body End -->
+@section Banner
+{
+    <section class="banner-section">
+        <div class="container">
+            <div class="banner set-bg" data-setbg="img/banner-bg.jpg" style="background-image: url(&quot;img/banner-bg.jpg&quot;);">
+                <div class="tag-new">NEW</div>
+                <span>New Arrivals</span>
+                <h2>STRIPED SHIRTS</h2>
+                <a href="#" class="site-btn">SHOP NOW</a>
+            </div>
+        </div>
+    </section>
+    }
 
 
 
