--- a/CNW/Views/Shared/_Layout.cshtml
+++ b/CNW/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
     <!-- Body Start  -->
     @RenderBody()
     <!-- Body  end -->
+    <!-- Body Start  -->
+    @RenderSection("Banner",false)
+    <!-- Body End  -->
     <!-- Footer section -->
     @RenderPage("Footer.cshtml")
     <!-- Footer section end -->
