--- a/CNW/Views/Login/Login.cshtml
+++ b/CNW/Views/Login/Login.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@{ Layout = null; }
+﻿@{ Layout = null; }
 
 <!DOCTYPE html>
 <html lang="en">
@@ -130,3 +128,4 @@
     <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="eea0802ef1470826cff9d09d-|49" defer=""></script>
 </body>
 </html>
+
