--- a/CNW/Views/Login/Index.cshtml
+++ b/CNW/Views/Login/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null; }
-
+@model CNW.Models.Entities.User
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,20 +34,21 @@
     <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100">
-                <form class="login100-form validate-form">
+                <!--Form Login-->
+                <form class="login100-form validate-form" method="post" action="/Login">
                     <span class="login100-form-title p-b-43">
                         Login to continue
                     </span>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" name="email">
+                        <input class="input100" type="text" name="user.username">
                         <span class="focus-input100"></span>
                         <span class="label-input100">Your Id or Email</span>
                     </div>
 
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="pass">
+                        <input class="input100" type="password" name="user.password">
                         <span class="focus-input100"></span>
                         <span class="label-input100">Password</span>
                     </div>
@@ -89,8 +90,8 @@
                         </a>
                     </div>
                 </form>
-
-                <div class="login100-more" style="background-image: url('~/Content/Login/images/bg-05.jpg');">
+                <!-- Ket thuc Form -->
+                <div class="login100-more" style="background-image: url('/Content/Login/images/bg-05.jpg');">
                 </div>
             </div>
         </div>
