--- a/CNW/Views/Category/SlideBar.cshtml
+++ b/CNW/Views/Category/SlideBar.cshtml
@@ -1,9 +1,10 @@
-﻿<div class="col-lg-3 order-2 order-lg-1">
+﻿@Model
+<div class="col-lg-3 order-2 order-lg-1">
     <div class="filter-widget">
         <h2 class="fw-title">Categories</h2>
         <ul class="category-menu">
             <li class="">
-                <a href="#">Woman wear</a>
+                <a href="#"></a>
                 <ul class="sub-menu">
                     <li><a href="#">Midi Dresses <span>(2)</span></a></li>
                     <li><a href="#">Maxi Dresses<span>(56)</span></a></li>
