--- a/CNW/Views/Home/Index.cshtml
+++ b/CNW/Views/Home/Index.cshtml
@@ -3,129 +3,36 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@using CNW.Models.Entities;
 @section HeroSection
 {
     <section class="hero-section">
         <div class="hero-slider owl-carousel owl-loaded owl-drag">
-
-
             <div class="owl-stage-outer">
                 <div class="owl-stage" style="transform: translate3d(-3806px, 0px, 0px); transition: all 0s ease 0s; width: 11418px;">
-                    <div class="owl-item cloned" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><div class="owl-item active" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><div class="owl-item" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><div class="owl-item cloned" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/bg-2.jpg" style="background-image: url(&quot;img/bg-2.jpg&quot;);">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-7 text-white">
-                                        <span>New Arrivals</span>
-                                        <h2>denim jackets</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                                        <a href="#" class="site-btn sb-line">DISCOVER</a>
-                                        <a href="#" class="site-btn sb-white">ADD TO CART</a>
-                                    </div>
-                                </div>
-                                <div class="offer-card text-white">
-                                    <span>from</span>
-                                    <h2>$29</h2>
-                                    <p>SHOP NOW</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    @foreach(SanPham item in Model)
+                                    {
+                                        <div class="owl-item cloned" style="width: 1903px;">
+                                            <div class="hs-item set-bg" data-setbg="/Content/img/bg.jpg" style="background-image: url(&quot;img/bg.jpg&quot;);">
+                                                <div class="container">
+                                                    <div class="row">
+                                                        <div class="col-xl-6 col-lg-7 text-white">
+                                                            <span>New Arrivals</span>
+                                                            <h2>@item.Name</h2>
+                                                            <p>@item.Description</p>
+                                                            <a href="#" class="site-btn sb-line">DISCOVER</a>
+                                                            <a href="#" class="site-btn sb-white">ADD TO CART</a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="offer-card text-white">
+                                                        <span>from</span>
+                                                        <h2>$@item.Price</h2>
+                                                        <p>SHOP NOW</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
                 </div>
             </div><div class="slider-nav-warp"><div class="slider-nav"><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i class="flaticon-left-arrow-1"></i></button><button type="button" role="presentation" class="owl-next"><i class="flaticon-right-arrow-1"></i></button></div><div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button></div></div></div>
         </div>
