commit model view controller

--- a/CNW/Views/Checkout/Index.cshtml
+++ b/CNW/Views/Checkout/Index.cshtml
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 order-2 order-lg-1">
-            <form class="checkout-form" method="post" href="@Url.Action()">
+            <form class="checkout-form" method="post" action="/Checkout">
                 <div class="cf-title">Billing Address</div>
                 <div class="row">
                     <div class="col-md-7">
