--- a/CNW/Views/Shared/_Layout.cshtml
+++ b/CNW/Views/Shared/_Layout.cshtml
@@ -48,9 +48,9 @@
     <!-- Body Start  -->
     @RenderBody()
     <!-- Body  end -->
-    <!-- Body Start  -->
-    @RenderSection("Banner",false)
-    <!-- Body End  -->
+    <!-- Banner Start  -->
+    @RenderSection("Banner", false)
+    <!-- Banner End  -->
     <!-- Footer section -->
     @RenderPage("Footer.cshtml")
     <!-- Footer section end -->
