--- a/CNW/Views/Login/Index.cshtml
+++ b/CNW/Views/Login/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@{ Layout = null; }
-@model CNW.Models.Entities.User
+﻿@model CNW.Models.Entities.UserAdmin
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +18,7 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/css-hamburgers/hamburgers.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/animsition/css/animsition.min.css">gag
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/select2/select2.min.css">
     <!--===============================================================================================-->
@@ -41,14 +40,14 @@
                     </span>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" name="user.username">
+                        <input class="input100" type="text" name="id">
                         <span class="focus-input100"></span>
                         <span class="label-input100">Your Id or Email</span>
                     </div>
 
-
+                    ad
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="user.password">
+                        <input class="input100" type="password" name="Password">
                         <span class="focus-input100"></span>
                         <span class="label-input100">Password</span>
                     </div>
@@ -129,4 +128,5 @@
     <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="eea0802ef1470826cff9d09d-|49" defer=""></script>
 </body>
 </html>
+
 
