--- a/CNW/Views/Product/ImageProduct.cshtml
+++ b/CNW/Views/Product/ImageProduct.cshtml
@@ -1,14 +1,17 @@
-﻿<div class="col-lg-6">
+﻿@model List<CNW.Models.Entities.Image>
+<div class="col-lg-6">
     <div class="product-pic-zoom" style="position: relative; overflow: hidden;">
-        <img class="product-big-img" src="img/single-product/1.jpg" alt="">
-        <img role="presentation" alt="" src="file:///D:/HIEP/CNW/divisima%20-%20Copy/img/single-product/1.jpg" class="zoomImg" style="position: absolute; top: -387.497px; left: -18.3879px; opacity: 0; width: 1000px; height: 1358px; border: medium none; max-width: none; max-height: none;">
+        <img class="product-big-img" src="~/Content/img/single-product/1.jpg" alt="">
+        <img role="presentation" alt="" src="file:///D:/HIEP/CNW/divisima%20-%20Copy/~/Content/img/single-product/1.jpg" class="zoomImg" style="position: absolute; top: -387.497px; left: -18.3879px; opacity: 0; width: 1000px; height: 1358px; border: medium none; max-width: none; max-height: none;">
     </div>
     <div class="product-thumbs" tabindex="1" style="overflow: hidden; outline: none;">
         <div class="product-thumbs-track">
-            <div class="pt active" data-imgbigurl="img/single-product/1.jpg"><img src="img/single-product/thumb-1.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/2.jpg"><img src="img/single-product/thumb-2.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/3.jpg"><img src="img/single-product/thumb-3.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/4.jpg"><img src="img/single-product/thumb-4.jpg" alt=""></div>
+            @foreach (var item in Model)
+            {
+                <div class="pt active" data-imgbigurl="@item.url"><img src="~/Content/img/single-product/thumb-1.jpg" alt=""></div>
+            }
+
+
         </div>
     </div>
 </div>
