--- a/CNW/Views/Home/Index.cshtml
+++ b/CNW/Views/Home/Index.cshtml
@@ -5,14 +5,9 @@
 }
 @using CNW.Models.Entities;
 @section HeroSection
-{
-    @{Html.RenderAction("HeroSection", "Home");}
-}
-<p>
-
-
-
-</p>
+{@{Html.RenderAction("HeroSection", "Home");}}
+<div>
+</div>
 @section FeatureSection
 {
     <section class="features-section">
@@ -21,7 +16,7 @@
                 <div class="col-md-4 p-0 feature">
                     <div class="feature-inner">
                         <div class="feature-icon">
-                            <img src="/Content/img/icons/1.png" alt="#">
+                            <img src="img/icons/1.png" alt="#">
                         </div>
                         <h2>Fast Secure Payments</h2>
                     </div>
@@ -29,7 +24,7 @@
                 <div class="col-md-4 p-0 feature">
                     <div class="feature-inner">
                         <div class="feature-icon">
-                            <img src="/Content/img/icons/2.png" alt="#">
+                            <img src="img/icons/2.png" alt="#">
                         </div>
                         <h2>Premium Products</h2>
                     </div>
@@ -37,7 +32,7 @@
                 <div class="col-md-4 p-0 feature">
                     <div class="feature-inner">
                         <div class="feature-icon">
-                            <img src="/Content/img/icons/3.png" alt="#">
+                            <img src="img/icons/3.png" alt="#">
                         </div>
                         <h2>Free &amp; fast Delivery</h2>
                     </div>
@@ -48,7 +43,7 @@
 
 }
 <!-- Body start -->
-@RenderPage("HomeBody.cshtml")
+@{Html.RenderAction("HomeBody","Home");}
 <!-- Body End -->
 @section Banner
 {
