--- a/CNW/Views/Product/Banner.cshtml
+++ b/CNW/Views/Product/Banner.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CNW.Models.Entities.Product>
+﻿@model IEnumerable<CNW.Models.Entities.Image>
 <div class="related-product-section">
     <div class="container">
         <div class="section-title">
@@ -9,20 +9,20 @@
                 <div class="owl-stage-outer">
                     <div class="owl-stage" style="transform: translate3d(-2056px, 0px, 0px); transition: all 0.25s ease 0s; width: 3819px;">
                         @foreach (var item in Model)
-                        {
+                        {                       
                             <div class="owl-item cloned" style="width: 263.75px; margin-right: 30px;">
                                 <div class="product-item">
                                     <div class="pi-pic">
                                         <div class="tag-new">New</div>
-                                        <img src="./img/product/2.jpg" alt="">
+                                        <img src="~/Content/img/@item.url" alt="">
                                         <div class="pi-links">
                                             <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
                                             <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
                                         </div>
                                     </div>
                                     <div class="pi-text">
-                                        <h6>@item.Price</h6>
-                                        <p>@item.Name</p>
+                                        <h6>@item.ProductDetail.Product.Price</h6>
+                                        <p>@item.ProductDetail.Product.Name</p>
                                     </div>
                                 </div>
                             </div>
