--- a/CNW/Views/Product/DetailProduct.cshtml
+++ b/CNW/Views/Product/DetailProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CNW.Models.Entities.ProductDetail>
+﻿@model CNW.Models.Entities.ProductDetail
 <div class="col-lg-6 product-details">
     <h2 class="p-title">White peplum top</h2>
     <h3 class="p-price">$39.90</h3>
@@ -17,32 +17,19 @@
         <p>Size</p>
         <div class="sc-item">
             <input type="radio" name="sc" id="xs-size">
-            <label for="xs-size">32</label>
-        </div>
-        <div class="sc-item">
-            <input type="radio" name="sc" id="s-size">
-            <label for="s-size">34</label>
-        </div>
-        <div class="sc-item">
-            <input type="radio" name="sc" id="m-size" checked="">
-            <label for="m-size">36</label>
-        </div>
-        <div class="sc-item">
-            <input type="radio" name="sc" id="l-size">
-            <label for="l-size">38</label>
-        </div>
-        <div class="sc-item disable">
-            <input type="radio" name="sc" id="xl-size" disabled="">
-            <label for="xl-size">40</label>
-        </div>
-        <div class="sc-item">
-            <input type="radio" name="sc" id="xxl-size">
-            <label for="xxl-size">42</label>
+            @foreach (var size in Model.Sizes)
+            {
+                <label for="xs-size">@size.characters</label>
+            }
         </div>
     </div>
     <div class="quantity">
         <p>Quantity</p>
-        <div class="pro-qty"><span class="dec qtybtn">-</span><span class="dec qtybtn">-</span><input type="text" value="1"><span class="inc qtybtn">+</span><span class="inc qtybtn">+</span></div>
+        <div class="pro-qty">
+            <span class="dec qtybtn">-</span>
+            <input type="text" value="1">
+            <span class="inc qtybtn">+</span>
+        </div>
     </div>
     <a href="#" class="site-btn">SHOP NOW</a>
     <div id="accordion" class="accordion-area">
@@ -52,10 +39,7 @@
             </div>
             <div id="collapse1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra tempor so dales. Phasellus sagittis auctor gravida. Integer bibendum sodales arcu id te mpus. Ut consectetur lacus leo, non scelerisque nulla euismod nec.</p>
-                    <p>Approx length 66cm/26" (Based on a UK size 8 sample)</p>
-                    <p>Mixed fibres</p>
-                    <p>The Model wears a UK size 8/ EU size 36/ US size 4 and her height is 5'8"</p>
+                    @Model.Description
                 </div>
             </div>
         </div>
@@ -66,7 +50,7 @@
             <div id="collapse2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="panel-body">
                     <img src="./img/cards.png" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra tempor so dales. Phasellus sagittis auctor gravida. Integer bibendum sodales arcu id te mpus. Ut consectetur lacus leo, non scelerisque nulla euismod nec.</p>
+                    @Model.Overview
                 </div>
             </div>
         </div>
