--- a/CNW/Views/Shared/Header.cshtml
+++ b/CNW/Views/Shared/Header.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="header-top">
+﻿<div class="header-top">
     <div class="container">
         <div class="row">
             <div class="col-lg-2 text-center text-lg-left">
