--- a/CNW/Views/User/Register.cshtml
+++ b/CNW/Views/User/Register.cshtml
@@ -111,6 +111,9 @@
                                 </div>
                             </div>
                         </div>
+                        <div>
+                            @Html.ActionLink("Back to Home","Index","Home")
+                        </div>
                     }
                 </div>
             </div>
