--- a/CNW/Views/Shared/Header.cshtml
+++ b/CNW/Views/Shared/Header.cshtml
@@ -17,7 +17,7 @@
                 <div class="user-panel">
                     <div class="up-item">
                         <i class="flaticon-profile"></i>
-                        <a href="/User/IndexLogin">Sign</a> In or <a href="#">Create Account</a>
+                        <a href="/User/Register">Sign</a> In or <a href="#">Create Account</a>
                     </div>
                     <div class="up-item">
                         <div class="shopping-card">
