--- a/CNW/Views/Home/HeroSection.cshtml
+++ b/CNW/Views/Home/HeroSection.cshtml
@@ -27,7 +27,9 @@
                     </div>
                 }
             </div>
-        </div><div class="slider-nav-warp"><div class="slider-nav"><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><i class="flaticon-left-arrow-1"></i></button><button type="button" role="presentation" class="owl-next"><i class="flaticon-right-arrow-1"></i></button></div><div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button></div></div></div>
+        </div><div class="slider-nav-warp"><div class="slider-nav">
+        
+        
     </div>
     <div class="container">
         <div class="slide-num-holder" id="snh-1"><span> 1</span><span>2</span></div>
