--- a/CNW/Views/Product/Index.cshtml
+++ b/CNW/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
 
         <div class="row">
-           @{ Html.RenderAction("ImageProduct", "Product"/*new {Pdetail = Model}*/); }
+           @{ Html.RenderAction("ImageProduct", "Product"); }
            @{ Html.RenderAction("DetailProduct", "Product"); }
         </div>
     </div>
