--- a/CNW/Views/Checkout/Index.cshtml
+++ b/CNW/Views/Checkout/Index.cshtml
@@ -19,36 +19,18 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 order-2 order-lg-1">
-            <form class="checkout-form" method="post" action="/Checkout">
+            <form class="checkout-form" method="post" action="/Checkout/addCheckout">
                 <div class="cf-title">Billing Address</div>
-                <div class="row">
-                    <div class="col-md-7">
-                        <p>*Billing Information</p>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="cf-radio-btns address-rb">
-                            <div class="cfr-item">
-                                <input type="radio" name="pm" id="one">
-                                <label for="one">Use my regular address</label>
-                            </div>
-                            <div class="cfr-item">
-                                <input type="radio" name="pm" id="two">
-                                <label for="two">Use a different address</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="row address-inputs">
+                    <div class="col-md-6">
+                        <input type="text" placeholder="Name" name="Name">
+                    </div>
                     <div class="col-md-12">
-                        <input type="text" placeholder="Address">
-                        <input type="text" placeholder="Address line 2">
-                        <input type="text" placeholder="Country">
+                        <input type="text" placeholder="Address" name="Address">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" placeholder="Zip code">
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" placeholder="Phone no.">
+                        <input type="text" placeholder="Phone" name="Phone">
                     </div>
                 </div>
                 <div class="cf-title">Delievery Info</div>
