--- a/CNW/Views/Product/Banner.cshtml
+++ b/CNW/Views/Product/Banner.cshtml
@@ -16,7 +16,7 @@
                                         <div class="tag-new">New</div>
                                         <img src="~/Content/img/@item.url" alt="">
                                         <div class="pi-links">
-                                            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
+                                            <a href="/Cart/AddCart?productId = @item.ProductID & quality = 1" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
                                             <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
                                         </div>
                                     </div>
