--- a/CNW/Views/Shared/Header.cshtml
+++ b/CNW/Views/Shared/Header.cshtml
@@ -17,7 +17,7 @@
                 <div class="user-panel">
                     <div class="up-item">
                         <i class="flaticon-profile"></i>
-                        <a href="/User/Register">Sign</a> In or <a href="#">Create Account</a>
+                        <a href="/User/IndexLogin">Sign</a> In or <a href="/User/Register">Create Account</a>
                     </div>
                     <div class="up-item">
                         <div class="shopping-card">
@@ -35,8 +35,8 @@
     <div class="container">
         <div class="slicknav_menu">
             <a href="#" aria-haspopup="true" role="button" tabindex="0" class="slicknav_btn slicknav_collapsed" style="outline: currentcolor none medium;"><span class="slicknav_menutxt">MENU</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><ul class="slicknav_nav slicknav_hidden" style="display: none;" aria-hidden="true" role="menu">
-                <li><a href="#" role="menuitem" tabindex="-1">Home</a></li>
-                <li><a href="#" role="menuitem" tabindex="-1">Women</a></li>
+                <li><a href="/Home" role="menuitem" tabindex="-1">Home</a></li>
+                <li><a href="/Product" role="menuitem" tabindex="-1">Women</a></li>
                 <li><a href="#" role="menuitem" tabindex="-1">Men</a></li>
                 <li>
                     <a href="#" role="menuitem" tabindex="-1">
@@ -74,31 +74,12 @@
         <!-- menu -->
         <ul class="main-menu">
             <li><a href="/Home">Home</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">Men</a></li>
-            <li>
-                <a href="#">
-                    Jewelry
-                    <span class="new">New</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">Shoes</a>
-                <ul class="sub-menu">
-                    <li><a href="#">Sneakers</a></li>
-                    <li><a href="#">Sandals</a></li>
-                    <li><a href="#">Formal Shoes</a></li>
-                    <li><a href="#">Boots</a></li>
-                    <li><a href="#">Flip Flops</a></li>
-                </ul>
-            </li>
+            <li><a href="/Category/Index?id=002">Women</a></li>
+            <li><a href="/Category/Index?id=001">Men</a></li>
             <li>
                 <a href="#">Pages</a>
                 <ul class="sub-menu">
-                    <li><a href="./product.html">Product Page</a></li>
-                    <li><a href="./category.html">Category Page</a></li>
-                    <li><a href="./cart.html">Cart Page</a></li>
-                    <li><a href="./checkout.html">Checkout Page</a></li>
+                    <li><a href="/Category/Index?id=002">Category Page</a></li>
                     <li><a href="./contact.html">Contact Page</a></li>
                 </ul>
             </li>
