Commit day du truc nang trang chu

--- a/CNW/Views/Category/SlideBar.cshtml
+++ b/CNW/Views/Category/SlideBar.cshtml
@@ -11,7 +11,7 @@
                             @foreach (var item2 in item.Species)
                             {
                                 <li>
-                                    <a href="/Category/CategoryBody?id=@item2.id"> @item2.Name <span>(@item2.Products.Count)</span></a>
+                                    <a href="/Category/Index?id=@item2.id"> @item2.Name <span>(@item2.Products.Count)</span></a>
                             </li>
                             }
                         </ul>
