--- a/CNW/Views/Category/CategoryBody.cshtml
+++ b/CNW/Views/Category/CategoryBody.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CNW.Models.Entities.Product>
+﻿@model IEnumerable<CNW.Models.Entities.Image>
 <div class="col-lg-9  order-1 order-lg-2 mb-5 mb-lg-0">
     <div class="row">
         @if (Model != null)
@@ -9,7 +9,7 @@
                     <div class="product-item">
                         <div class="pi-pic">
                             <div class="tag-sale">ON SALE</div>
-                            <img src="~/Content/img/product/6.jpg" alt="">
+                            <img src="~/Content/img/@item.url" alt="">
                             <div class="pi-links">
                                 <a href="/Product/Index/@item.ProductDetail.Id" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
                                 <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
@@ -17,7 +17,7 @@
                         </div>
                         <div class="pi-text">
                             <h6></h6>
-                            <p>@item.Name</p>
+                            <p>@item.ProductDetail.Product.Name</p>
                         </div>
                     </div>
                     <div class="text-center w-100 pt-3">
