--- a/CNW/Views/Home/HeroSection.cshtml
+++ b/CNW/Views/Home/HeroSection.cshtml
@@ -6,7 +6,7 @@
                 @foreach (var item in Model)
                 {
                     <div class="owl-item cloned" style="width: 1903px;">
-                        <div class="hs-item set-bg" data-setbg="/Content/img/product/1.jpg" style="background-image: url(&quot;/Content/img/bg.jpg&quot;);">
+                        <div class="hs-item set-bg" data-setbg="/Content/img/@item.url" style="background-image: url(&quot;/Content/img/bg.jpg&quot;);">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-7 text-white">
