--- a/CNW/Views/Shared/Header.cshtml
+++ b/CNW/Views/Shared/Header.cshtml
@@ -8,8 +8,8 @@
                 </a>
             </div>
             <div class="col-xl-6 col-lg-5">
-                <form class="header-search-form">
-                    <input type="text" placeholder="Search on divisima ....">
+                <form class="header-search-form" method="post" action="/Search">
+                    <input type="text" placeholder="Search on divisima ...." name="search">
                     <button><i class="flaticon-search"></i></button>
                 </form>
             </div>
